--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <a href="https://www.givengain.com/project/JM-Rides-4-Rhinos" target="_blank" class="text-red-500 hover:text-red-600" title="Give & Gain">
         <i class="fas fa-heart"></i>
       </a>
-      <a href="https://github.com/YOURUSERNAME" target="_blank" class="text-gray-800 hover:text-black" title="GitHub">
+      <a href="https://github.com/jmridesbikes" target="_blank" class="text-gray-800 hover:text-black" title="GitHub">
         <i class="fab fa-github"></i>
       </a>
     </div>
