--- a/index.html
+++ b/index.html
@@ -1,86 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Du Plessis Innovations</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-  </style>
-</head>
-<body class="bg-white text-gray-800 font-sans">
-  <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col items-center justify-center bg-gray-100 px-4 text-center">
-    <h1 class="text-5xl font-bold mb-4">Du Plessis Innovations</h1>
-    <p class="text-xl mb-6">Innovating through Code, Creation & Community</p>
-    <a href="#brands" class="bg-blue-600 text-white px-6 py-3 rounded-full hover:bg-blue-700 transition">Learn More</a>
-  </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Du Plessis Innovations</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
+  </head>
+  <body class="bg-white text-gray-800 font-sans">
+    <!-- Hero Section -->
+    <section
+      class="min-h-screen flex flex-col items-center justify-center bg-gray-100 px-4 text-center"
+    >
+      <h1 class="text-5xl font-bold mb-4">Du Plessis Innovations</h1>
+      <p class="text-xl mb-6">Innovating through Code, Creation & Community</p>
+      <a
+        href="#brands"
+        class="bg-blue-600 text-white px-6 py-3 rounded-full hover:bg-blue-700 transition"
+        >Learn More</a
+      >
+    </section>
 
-  <!-- About Section -->
-  <section class="py-16 px-6 max-w-3xl mx-auto text-center" id="about">
-    <h2 class="text-3xl font-semibold mb-4">About Us</h2>
-    <p>
-      Du Plessis Innovations is a multi-brand creative and technical business. We develop modern software under the Du Plessis Innovations name, create custom 3D-printed solutions under JM 3D Prints, and engage the cycling community with JM Rides Bikes.
-    </p>
-  </section>
+    <!-- About Section -->
+    <section class="py-16 px-6 max-w-3xl mx-auto text-center" id="about">
+      <h2 class="text-3xl font-semibold mb-4">About Us</h2>
+      <p>
+        Du Plessis Innovations is a multi-brand creative and technical business.
+        We develop modern software under the Du Plessis Innovations name, create
+        custom 3D-printed solutions under JM 3D Prints, and engage the cycling
+        community with JM Rides Bikes.
+      </p>
+    </section>
 
-  <!-- Brands / Services Section -->
-  <section class="py-16 bg-gray-50 px-6" id="brands">
-    <div class="max-w-6xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-10">Our Brands</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <!-- DuPlessis Innovations -->
-        <div class="bg-white p-6 rounded-xl shadow-md">
-          <h3 class="text-xl font-semibold mb-2">Du Plessis Innovations</h3>
-          <p>App and software development for modern platforms.</p>
-        </div>
+    <!-- Brands / Services Section -->
+    <section class="py-16 bg-gray-50 px-6" id="brands">
+      <div class="max-w-6xl mx-auto text-center">
+        <h2 class="text-3xl font-semibold mb-10">Our Brands</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+          <!-- Du Plessis Innovations -->
+          <div class="bg-white p-6 rounded-xl shadow-md">
+            <h3 class="text-xl font-semibold mb-2">Du Plessis Innovations</h3>
+            <p>App and software development for modern platforms.</p>
+          </div>
 
-        <!-- JM 3D Prints -->
-        <div class="bg-white p-6 rounded-xl shadow-md">
-          <h3 class="text-xl font-semibold mb-2">JM 3D Prints</h3>
-          <p>Custom 3D printing solutions for individuals and businesses.</p>
-        </div>
+          <!-- JM 3D Prints -->
+          <div class="bg-white p-6 rounded-xl shadow-md">
+            <h3 class="text-xl font-semibold mb-2">JM 3D Prints</h3>
+            <p>Custom 3D printing solutions for individuals and businesses.</p>
+          </div>
 
-        <!-- JM Rides Bikes -->
-        <div class="bg-white p-6 rounded-xl shadow-md">
-          <h3 class="text-xl font-semibold mb-2">JM Rides Bikes</h3>
-          <p>Community-driven cycling content and brand building.</p>
+          <!-- JM Rides Bikes -->
+          <div class="bg-white p-6 rounded-xl shadow-md">
+            <h3 class="text-xl font-semibold mb-2">JM Rides Bikes</h3>
+            <p>Community-driven cycling content and brand building.</p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Section -->
-  <section class="py-16 px-6 text-center" id="contact">
-    <h2 class="text-3xl font-semibold mb-4">Get In Touch</h2>
-    <p class="mb-6">Want to work with us or just say hi? Drop an email or connect with us on social platforms.</p>
-    <!-- <a href="mailto:hello@duplessisinnovations.com" class="text-blue-600 underline">hello@duplessisinnovations.com</a> -->
-    <a href="mailto:jmridesbikes@gmail.com" class="text-blue-600 underline">jmridesbikes@gmail.com</a>
-    <div class="mt-8 flex justify-center gap-6 text-2xl">
-      <a href="https://instagram.com/jmridesbikes" target="_blank" class="text-pink-500 hover:text-pink-600" title="Instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://facebook.com/jmridesbikes" target="_blank" class="text-blue-700 hover:text-blue-800" title="Facebook">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://wa.me/2787878768" target="_blank" class="text-green-600 hover:text-green-700" title="WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <a href="https://www.givengain.com/project/JM-Rides-4-Rhinos" target="_blank" class="text-red-500 hover:text-red-600" title="Give & Gain">
-        <i class="fas fa-heart"></i>
-      </a>
-     <!-- <a href="https://github.com/jmridesbikes" target="_blank" class="text-gray-800 hover:text-black" title="GitHub">
+    <!-- Contact Section -->
+    <section class="py-16 px-6 text-center" id="contact">
+      <h2 class="text-3xl font-semibold mb-4">Get In Touch</h2>
+      <p class="mb-6">
+        Want to work with us or just say hi? Drop an email or connect with us on
+        social platforms.
+      </p>
+      <!-- <a href="mailto:hello@duplessisinnovations.com" class="text-blue-600 underline">hello@duplessisinnovations.com</a> -->
+      <a href="mailto:jmridesbikes@gmail.com" class="text-blue-600 underline"
+        >jmridesbikes@gmail.com</a
+      >
+      <div class="mt-8 flex justify-center gap-6 text-2xl">
+        <a
+          href="https://instagram.com/jm_rides_bikes"
+          target="_blank"
+          class="text-pink-500 hover:text-pink-600"
+          title="Instagram"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a
+          href="https://facebook.com/jmridesbikes"
+          target="_blank"
+          class="text-blue-700 hover:text-blue-800"
+          title="Facebook"
+        >
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a
+          href="https://wa.me/2787878768"
+          target="_blank"
+          class="text-green-600 hover:text-green-700"
+          title="WhatsApp"
+        >
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a
+          href="https://www.givengain.com/project/JM-Rides-4-Rhinos"
+          target="_blank"
+          class="text-red-500 hover:text-red-600"
+          title="Give & Gain"
+        >
+          <i class="fas fa-heart"></i>
+        </a>
+        <!-- <a href="https://github.com/jmridesbikes" target="_blank" class="text-gray-800 hover:text-black" title="GitHub">
         <i class="fab fa-github"></i>
       </a> -->
-    </div>
-  </section>
+      </div>
+    </section>
 
-  <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500">
-    &copy; 2025 Du Plessis Innovations. All rights reserved.
-  </footer>
-</body>
+    <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500">
+      &copy; 2025 Du Plessis Innovations. All rights reserved.
+    </footer>
+  </body>
 </html>
