--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://facebook.com/jmridesbikes"
+          href="https://facebook.com/jmridesbikesza"
           target="_blank"
           class="text-blue-700 hover:text-blue-800"
           title="Facebook"
