--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Du Plessis Innovations</title>
+    <title>
+      Du Plessis Innovations | Software, 3D Printing & Cycling Content
+    </title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Du Plessis Innovations builds modern apps, custom 3D prints, and grows the cycling community through unique content and initiatives."
+    />
+    <meta
+      name="keywords"
+      content="Software Development, 3D Printing, Cycling Community, Du Plessis Innovations, JM Rides Bikes, JM 3D Prints"
+    />
+    <meta name="author" content="Du Plessis Innovations" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Du Plessis Innovations" />
+    <meta
+      property="og:description"
+      content="Innovating through Code, Creation & Community."
+    />
+    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Tailwind CSS & Icons -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -15,53 +40,137 @@
       }
     </style>
   </head>
-  <body class="bg-white text-gray-800 font-sans">
+  <body class="bg-white text-gray-800 font-sans leading-relaxed">
     <!-- Hero Section -->
     <section
       class="min-h-screen flex flex-col items-center justify-center bg-gray-100 px-4 text-center"
     >
       <h1 class="text-5xl font-bold mb-4">Du Plessis Innovations</h1>
-      <p class="text-xl mb-6">Innovating through Code, Creation & Community</p>
+      <p class="text-xl mb-6 text-gray-700">
+        Innovating through Code, Creation & Community
+      </p>
       <a
-        href="#brands"
-        class="bg-blue-600 text-white px-6 py-3 rounded-full hover:bg-blue-700 transition"
-        >Learn More</a
+        href="#rhino-connect"
+        class="bg-blue-600 text-white px-6 py-3 rounded-full hover:bg-blue-700 transition-all duration-300 shadow-md"
       >
+        Learn More
+      </a>
     </section>
 
     <!-- About Section -->
     <section class="py-16 px-6 max-w-3xl mx-auto text-center" id="about">
       <h2 class="text-3xl font-semibold mb-4">About Us</h2>
       <p>
-        Du Plessis Innovations is a multi-brand creative and technical business.
-        We develop modern software under the Du Plessis Innovations name, create
-        custom 3D-printed solutions under JM 3D Prints, and engage the cycling
-        community with JM Rides Bikes.
+        We’re a multidisciplinary business uniting software, design, and
+        community. Our ventures include Du Plessis Innovations (software), JM 3D
+        Prints (custom fabrication), and JM Rides Bikes (cycling community
+        growth).
       </p>
     </section>
 
-    <!-- Brands / Services Section -->
+    <!-- Brands Section -->
     <section class="py-16 bg-gray-50 px-6" id="brands">
       <div class="max-w-6xl mx-auto text-center">
         <h2 class="text-3xl font-semibold mb-10">Our Brands</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <!-- Du Plessis Innovations -->
-          <div class="bg-white p-6 rounded-xl shadow-md">
+          <div
+            class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition"
+          >
             <h3 class="text-xl font-semibold mb-2">Du Plessis Innovations</h3>
-            <p>App and software development for modern platforms.</p>
+            <p>Modern app and software development tailored to your needs.</p>
           </div>
-
-          <!-- JM 3D Prints -->
-          <div class="bg-white p-6 rounded-xl shadow-md">
+          <div
+            class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition"
+          >
             <h3 class="text-xl font-semibold mb-2">JM 3D Prints</h3>
-            <p>Custom 3D printing solutions for individuals and businesses.</p>
+            <p>Custom 3D-printed solutions for businesses and creatives.</p>
+          </div>
+          <div
+            class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition"
+          >
+            <h3 class="text-xl font-semibold mb-2">JM Rides Bikes</h3>
+            <p>Community-driven cycling content, events, and advocacy.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Rhino Connect / Give & Gain Section -->
+    <section class="py-16 px-6 bg-white text-center" id="rhino-connect">
+      <div class="max-w-4xl mx-auto">
+        <h2 class="text-3xl font-semibold mb-4">Support Rhino Connect</h2>
+        <p class="mb-8 text-gray-700">
+          We're riding for a cause. <strong>JM Rides 4 Rhinos</strong> supports
+          conservation by raising funds to provide milk for orphaned baby
+          rhinos. Be part of the mission.
+        </p>
+
+        <!-- Image Carousel
+        <div class="relative overflow-hidden rounded-lg shadow-lg group">
+          <div
+            id="carousel"
+            class="flex transition-transform duration-700 ease-in-out"
+          >
+            <img
+              src="https://source.unsplash.com/800x400/?rhino,1"
+              class="w-full flex-shrink-0 object-cover"
+              alt="Rhino 1"
+            />
+            <img
+              src="https://source.unsplash.com/800x400/?rhino,2"
+              class="w-full flex-shrink-0 object-cover"
+              alt="Rhino 2"
+            />
+            <img
+              src="https://source.unsplash.com/800x400/?rhino,3"
+              class="w-full flex-shrink-0 object-cover"
+              alt="Rhino 3"
+            />
           </div>
 
-          <!-- JM Rides Bikes -->
-          <div class="bg-white p-6 rounded-xl shadow-md">
-            <h3 class="text-xl font-semibold mb-2">JM Rides Bikes</h3>
-            <p>Community-driven cycling content and brand building.</p>
+          
+          <button
+            id="prev"
+            class="absolute top-1/2 left-0 transform -translate-y-1/2 px-4 text-white text-2xl bg-black/50 hover:bg-black/70"
+          >
+            &#10094;
+          </button>
+          <button
+            id="next"
+            class="absolute top-1/2 right-0 transform -translate-y-1/2 px-4 text-white text-2xl bg-black/50 hover:bg-black/70"
+          >
+            &#10095;
+          </button>
+
+          
+          <div
+            id="dots"
+            class="absolute bottom-3 left-1/2 transform -translate-x-1/2 flex gap-2"
+          >
+            <span
+              class="w-3 h-3 bg-gray-400 rounded-full cursor-pointer"
+              data-index="0"
+            ></span>
+            <span
+              class="w-3 h-3 bg-gray-300 rounded-full cursor-pointer"
+              data-index="1"
+            ></span>
+            <span
+              class="w-3 h-3 bg-gray-300 rounded-full cursor-pointer"
+              data-index="2"
+            ></span>
           </div>
+        </div> -->
+
+        <!-- Call to Action -->
+        <div class="mt-8">
+          <a
+            href="https://www.givengain.com/project/JM-Rides-4-Rhinos"
+            target="_blank"
+            class="inline-block bg-red-600 text-white px-6 py-3 rounded-full shadow hover:bg-red-700 transition-all"
+          >
+            Donate or Learn More
+          </a>
         </div>
       </div>
     </section>
@@ -70,10 +179,9 @@
     <section class="py-16 px-6 text-center" id="contact">
       <h2 class="text-3xl font-semibold mb-4">Get In Touch</h2>
       <p class="mb-6">
-        Want to work with us or just say hi? Drop an email or connect with us on
-        social platforms.
+        We’d love to hear from you! Reach out by email or connect via social
+        media.
       </p>
-      <!-- <a href="mailto:hello@duplessisinnovations.com" class="text-blue-600 underline">hello@duplessisinnovations.com</a> -->
       <a href="mailto:jmridesbikes@gmail.com" class="text-blue-600 underline"
         >jmridesbikes@gmail.com</a
       >
@@ -83,41 +191,100 @@
           target="_blank"
           class="text-pink-500 hover:text-pink-600"
           title="Instagram"
-        >
-          <i class="fab fa-instagram"></i>
-        </a>
+          ><i class="fab fa-instagram"></i
+        ></a>
         <a
           href="https://facebook.com/jmridesbikesza"
           target="_blank"
           class="text-blue-700 hover:text-blue-800"
           title="Facebook"
-        >
-          <i class="fab fa-facebook"></i>
-        </a>
+          ><i class="fab fa-facebook"></i
+        ></a>
         <a
           href="https://wa.me/27837878768"
           target="_blank"
           class="text-green-600 hover:text-green-700"
           title="WhatsApp"
-        >
-          <i class="fab fa-whatsapp"></i>
-        </a>
+          ><i class="fab fa-whatsapp"></i
+        ></a>
         <a
           href="https://www.givengain.com/project/JM-Rides-4-Rhinos"
           target="_blank"
           class="text-red-500 hover:text-red-600"
-          title="Give & Gain"
-        >
-          <i class="fas fa-heart"></i>
-        </a>
-        <!-- <a href="https://github.com/jmridesbikes" target="_blank" class="text-gray-800 hover:text-black" title="GitHub">
-        <i class="fab fa-github"></i>
-      </a> -->
+          title="Support JM Rides 4 Rhinos"
+          ><i class="fas fa-heart"></i
+        ></a>
       </div>
     </section>
 
     <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500">
       &copy; 2025 Du Plessis Innovations. All rights reserved.
     </footer>
+    <!-- <script>
+      const carousel = document.getElementById("carousel");
+      const dots = document.querySelectorAll("#dots span");
+      const nextBtn = document.getElementById("next");
+      const prevBtn = document.getElementById("prev");
+
+      let index = 0;
+      let interval;
+
+      function updateCarousel() {
+        carousel.style.transform = `translateX(-${index * 100}%)`;
+        dots.forEach((dot, i) => {
+          dot.classList.toggle("bg-gray-400", i === index);
+          dot.classList.toggle("bg-gray-300", i !== index);
+        });
+      }
+
+      function nextSlide() {
+        index = (index + 1) % carousel.children.length;
+        updateCarousel();
+      }
+
+      function prevSlide() {
+        index =
+          (index - 1 + carousel.children.length) % carousel.children.length;
+        updateCarousel();
+      }
+
+      nextBtn.addEventListener("click", () => {
+        nextSlide();
+        resetInterval();
+      });
+
+      prevBtn.addEventListener("click", () => {
+        prevSlide();
+        resetInterval();
+      });
+
+      dots.forEach((dot) => {
+        dot.addEventListener("click", () => {
+          index = parseInt(dot.dataset.index);
+          updateCarousel();
+          resetInterval();
+        });
+      });
+
+      function startAutoScroll() {
+        interval = setInterval(nextSlide, 4000); // every 4 seconds
+      }
+
+      function resetInterval() {
+        clearInterval(interval);
+        startAutoScroll();
+      }
+
+      // Pause on hover
+      const carouselContainer = carousel.parentElement;
+      carouselContainer.addEventListener("mouseenter", () =>
+        clearInterval(interval)
+      );
+      carouselContainer.addEventListener("mouseleave", () => startAutoScroll());
+
+      // Start
+      updateCarousel();
+      startAutoScroll();
+    </script> -->
   </body>
 </html>
