--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
           Custom 3D Printing
         </h1>
         <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">
-          Transform your ideas into reality with AI-powered 3D printing solutions. 
-          Get instant quotes and professional slicing recommendations.
+          Transform your ideas into reality with professional 3D printing services. 
+          Get instant quotes and start your project today.
         </p>
         <a
           href="#3d-printing"
@@ -237,10 +237,10 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-16 max-w-4xl mx-auto">
           <div class="text-center p-6 bg-gray-50 rounded-xl">
             <div class="text-4xl text-blue-600 mb-4">
-              <i class="fas fa-robot"></i>
+              <i class="fas fa-calculator"></i>
             </div>
-            <h3 class="text-xl font-semibold mb-2">AI-Powered Analysis</h3>
-            <p class="text-gray-600">Instant model analysis with slicing recommendations and print optimization</p>
+            <h3 class="text-xl font-semibold mb-2">Instant Quotes</h3>
+            <p class="text-gray-600">Get immediate cost estimates for your 3D printing projects</p>
           </div>
           <div class="text-center p-6 bg-gray-50 rounded-xl">
             <div class="text-4xl text-purple-600 mb-4">
